--- a/Detyra1.html
+++ b/Detyra1.html
@@ -20,6 +20,10 @@
         font-size: 25px;
         text-align:center; 
         }
+        h4{
+        font-size: 20px;
+            text-align:center; 
+        }
         h5{
         text-align:center; 
         }
@@ -66,7 +70,7 @@
 
     <br>
 
-    <p><strong>Email:</strong> l3onshabani@gmail.com &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <strong>Phone:</strong> 011212121 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <strong>Facebook:</strong> Leon shabani</p>
+    <p><strong>Email:</strong> l3onshabani@gmail.com &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <strong>Phone:</strong>03221578 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <strong>Facebook:</strong> Leon shabani &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <strong>Address:</strong> <del>Gavran</del> Hoxh lipovica </p>
 
     <br> <br> <hr><br>
 
@@ -81,6 +85,9 @@
     <br>
     <li><a href="#contact-me">Contact Me</a></li>
     </ul>
+    <h4>Knowing about me:
+    <progress value="10" max="100">10%</progress>
+    </h4>
 
     <!-- ktu perfundon headin fillon body -->
     <br><br><hr><br><br><br>
@@ -88,7 +95,7 @@
     <h2 id="personal-profile">Personal Profile</h2>
     <br>
     <br>
-    <p>Lorem amet consectetur adipisicing elit.Corrupti, distinctio dolorum. Dolor aperiam quisquam vel, alias optio beatae praesentium in nemo porro pariatur dolorum placeat. Itaque non deserunt totam doloremque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum deleniti error accusamus fuga? Cumque, hic! Neque nostrum rem facere similique exercitationem, unde minus. Cupiditate maiores molestiae suscipit libero, hic vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate molestiae corporis incidunt, nostrum et distinctio eius quas molestias officia. Ducimus blanditiis labore vel! Quas fugiat debitis aut veniam tempora placeat.</p>
+    <p>Lorem amet consectetur adipisicing elit.Corrupti, distinctio dolorum. Dolor aperiam quisquam vel, alias optio beatae praesentium in nemo porro pariatur dolorum placeat.<q>Itaque non deserunt totam doloremque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum deleniti error accusamus fuga? Cumque, hic! Neque nostrum rem facere similique exercitationem,</q> unde minus. Cupiditate maiores molestiae suscipit libero, hic vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. <ins>Voluptate molestiae corporis incidunt, nostrum et distinctio eius quas molestias officia. Ducimus blanditiis labore vel! Quas fugiat debitis aut veniam tempora placeat.</ins></p>
 
     <br><br>
 
@@ -96,7 +103,7 @@
 
     <br><br>
 
-    <p>Lorem amet constaque non deserunt totam doloremque! Lorem ipsum dolor, sit et consectetur <b>adipisicing elit. Harum deleniti error accusamus Neque nostrum rem facere similique exercitationem, unde minus. Cupiditate maiores molestiae suscipit libermo, hic vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate molestiae corporis</b> incidunt, nostrum et distinctio eius quas molestias officia. Ducimus blanditiis labore vel! Quas fugiat debitis aut veniam tempora placeat.</p>
+    <p><q>Lorem amet constaque non deserunt totam doloremque! Lorem ipsum dolor, sit et consectetur</q> <b>adipisicing elit. Harum deleniti error accusamus Neque nostrum rem facere similique exercitationem, unde minus. Cupiditate maiores molestiae suscipit libermo, hic vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate molestiae corporis</b> incidunt, nostrum et distinctio eius quas molestias officia. Ducimus blanditiis labore vel! Quas fugiat debitis aut veniam tempora placeat.</p>
 
     <br><br>
 
@@ -104,7 +111,12 @@
 
     <br><br>
 
-    <p>Lorem amet constaque non deserunt totam doloremque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum deleniti error accusamus Neq blanditiis labore vel! Quas fugiat debitis aut veniam tempora placeat.</p>
+    <p><strong><q>Lorem amet constaque non deserunt totam doloremque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum deleniti error accusamus Neq blanditiis labore vel! </q></strong><del>Quas fugiat debitis aut veniam tempora placeat.</del></p>
+    <br>
+
+    <h4>Knowing about me:
+        <progress value="30" max="100">10%</progress>
+        </h4>
 
     <br><br><br><br>
 
@@ -117,22 +129,32 @@
     <h2 id="work-experience">Work Experience</h2>
     <br>
     <h3>Google</h3>
-    <p>01.08.2010</p>
-    <p> <cite>beatae praesentium in nemo porro pariatur dolorum placeat.</cite> Itaque non deserunt torror accusamus fuga? Cumque, hic! Neque nostrum rem facere <b>similique exercitationem, unde minus. Cupiditate maiores molestiae suscipit libero,</b> hic vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate molestiae corporis incidunt, nostrum et distinctio eius quas molestias officia. Ducimus blanditiis labore vel! Quas <bold>fugiat debitis aut</bold> veniam tempora placeat.</p>
+    <p><abbr title="Koha sa kam punuar ne kompani">01.08.2010</abbr></p>
+    <p> <cite>beatae praesentium in nemo porro pariatur dolorum placeat.</cite> Itaque non deserunt torror accusamus fuga? Cumque, hic! Neque nostrum rem facere <b>similique exercitationem, unde minus. Cupiditate maiores molestiae suscipit libero,</b> hic vero. Lorem ipsum dolor sit amet consecteturlit. Voluptate molestiae corporis incidunt, nostrum et distinctio eius quas molestias offis labore vel! Quas <bold>fugiat debitis aut</bold>&nbsp; <a href="https://www.google.com/"><q>Google</q></a></p>
     
     <br><br>
 
-    <h3>facebook</h3>
-    <p>12.02.2015</p>
-    <p> in nemo porro pariatur dolorum placeat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex molestiae repellat accusantium praesentium asperiores suscipit sit, perferendis a provident voluptatibus unde nesciunt fuga voluptate quae repellendus beatae ea atque quas.<strong>Itaque et distinctio eius quas molestias officia. Ducimus blanditiis labore vel! Quas fugiat</strong> debitis aut veniam tempora placeat. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis eaque molestias sapiente amet distinctio optio consequatur saepe quam officiis animi. Cumque illum atque facilis praesentium libero accusantium autem earum doloribus?</p>
+    <h3>Facebook</h3>
+    <p><abbr title="Koha sa kam punuar ne kompani">12.02.2015</abbr></p>
+    <p> in nemo porro pariatur dolorum placeat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex molestiae repellat accusantium praesentium asperiores suscipit sit, perferendis a provident voluptatibus unde nesciunt fuga voluptate quae repellendus beatae ea atque quas.<strong>Itaque et distinctio eius quas molestias officia. Ducimus blanditiis labore vel! Quas fugiat</strong> debitis aut veniam tempora placeat. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis eaque molestias sapiente amet distinctio optio consequatur<ins> saepe quam officiis animi. Cumque illum atque facilis praesentium libero accusantium autem earum doloribus?</ins>
+        &nbsp; <a href="https://www.facebook.com/"><q>Facebook</q></a>
+    </p>
 
     <br><br>
 
     <h3>PerProgramera</h3>
-    <p>05.12.2022</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In sunt id iure ipsam. Cumque facere consequuntur labore nulla dolorem totam quod est facilis ab, tempora cupiditate, vel nam reprehenderit in. Lorem amet consectetur adipisicing elit. Corrupti, distinctio dolorum. <cite>Itaque non deserunt totam doloremque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum deleniti error accusamus fuga? Cumque, hic! Neque nostrum rem facere similique exercitationem, unde minus. Cupiditate maiores molestiae suscipit libero, hic vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate molestiae corporis incidunt, nostrum et distinctio eius quas molestias officia. Ducimus blanditiis labore vel! Quas fugiat</cite></p>
+    <p><abbr title="Koha sa kam punuar ne kompani">05.12.2022</abbr></p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In sunt id iure ipsam. <q>Cumque facere consequuntur labore nulla dolorem totam quod est facilis ab, tempora cupiditate, vel nam reprehenderit in. Lorem amet consectetur adipisicing elit. Corrupti, distinctio dolorum. <cite>Itaque non deserunt totam doloremque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum deleniti error accusamus fuga? Cumque, hic! Neque nostrum rem facere similique exercitationem, unde minus. Cupiditate</q> maiores molestiae suscipit libero, hic vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate molestiae corporis incidunt, nostrum et distinctio eius quas molestias officia. Ducimus blanditiis labore vel! Quas fugiat</cite>&nbsp;<a href="https://bootcamp.perprogramera.com/"><q>PerProgramera</q></a></p>
     
+    <br>
+
+    <h4>Knowing about me:
+        <progress value="60" max="100">10%</progress>
+        </h4>
+
     <br><br>
+
 
     <ul>
         <li><a href="#head">Header ^</a></li>
@@ -174,6 +196,12 @@
     <h3>django:
         <progress value="75" max="100">75%</progress>
     </h3>
+
+    <br>
+
+    <h4>Knowing about me:
+        <progress value="80" max="100">10%</progress>
+        </h4>
 
     <br><br>
 
@@ -233,6 +261,11 @@
     </tbody>
 </table>
 <!-- ktu perfundon body fillon footer -->
+<br>
+
+<h4>Knowing about me:
+    <progress value="100" max="100">10%</progress>
+    </h4>
 <br><br><br><br><br>
 
 <ul>
@@ -240,6 +273,11 @@
     </ul>
 <hr>
 <br>
+<br>
+
+<h4>How much did u learn about me:
+    <input type="range" >
+    </h4>
 <h2 id="contact-me">Contact Me</h2>
 <br>
 <form>
@@ -252,17 +290,39 @@
 <input type="email" name="Email" placeholder="Email"  >
 <br>
 <br>
-<input type="password" name="password" placeholder="Enter your password" > 
+<input type="phone" name="phone" placeholder="Enter your phone number" > 
+<br>
+<br>
+<input style="margin: 0 auto; 
+width:165px;" type="date" name="Birthday">
+
 <br>
 <br>
 <button type="submit">Submit!</button>
-</form>
+<br>
+<br>
 
-<br><br><br>
+<!-- mundet edhe me input -->
+<!-- <input type="Submit" value="Send"> -->
+<!--  -->
+
+<input style="margin: 0 auto; 
+width:170px;" type="reset" value="Clear">
+
+<br><br>
+
+<address>
+    <p><b>Rr. Qanar qeshme</b></p>
+    <p>Gjilan 60000, Republika e kosoves </p>
+</address>
+
+
 
 <ul>
     <li><a href="#head">Header ^</a></li>
     </ul>
+    <br>
+
 <hr>
 
 <!-- ktu perfundon footer -->
