--- a/Detyra1.html
+++ b/Detyra1.html
@@ -130,14 +130,14 @@
     <br>
     <h3>Google</h3>
     <p><abbr title="Koha sa kam punuar ne kompani">01.08.2010</abbr></p>
-    <p> <cite>beatae praesentium in nemo porro pariatur dolorum placeat.</cite> Itaque non deserunt torror accusamus fuga? Cumque, hic! Neque nostrum rem facere <b>similique exercitationem, unde minus. Cupiditate maiores molestiae suscipit libero,</b> hic vero. Lorem ipsum dolor sit amet consecteturlit. Voluptate molestiae corporis incidunt, nostrum et distinctio eius quas molestias offis labore vel! Quas <bold>fugiat debitis aut</bold>&nbsp; <a href="https://www.google.com/"><q>Google</q></a></p>
+    <p> <cite>beatae praesentium in nemo porro pariatur dolorum placeat.</cite> Itaque non deserunt torror accusamus fuga? Cumque, hic! Neque nostrum rem facere <b>similique exercitationem, unde minus. Cupiditate maiores molestiae suscipit libero,</b> hic vero. Lorem ipsum dolor sit amet consecteturlit. Voluptate molestiae corporis incidunt, nostrum et distinctio eius quas molestias offis labore vel! Quas <bold>fugiat debitis aut</bold>&nbsp; <a href="https://www.google.com/" target="_blank" title="Faqja zyrtare e Google"><q>Google</q></a></p>
     
     <br><br>
 
     <h3>Facebook</h3>
     <p><abbr title="Koha sa kam punuar ne kompani">12.02.2015</abbr></p>
     <p> in nemo porro pariatur dolorum placeat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex molestiae repellat accusantium praesentium asperiores suscipit sit, perferendis a provident voluptatibus unde nesciunt fuga voluptate quae repellendus beatae ea atque quas.<strong>Itaque et distinctio eius quas molestias officia. Ducimus blanditiis labore vel! Quas fugiat</strong> debitis aut veniam tempora placeat. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis eaque molestias sapiente amet distinctio optio consequatur<ins> saepe quam officiis animi. Cumque illum atque facilis praesentium libero accusantium autem earum doloribus?</ins>
-        &nbsp; <a href="https://www.facebook.com/"><q>Facebook</q></a>
+        &nbsp; <a href="https://www.facebook.com/"target="_blank" title="Faqja zyrtare e Facebook"><q>Facebook</q></a>
     </p>
 
     <br><br>
@@ -145,7 +145,8 @@
     <h3>PerProgramera</h3>
     <p><abbr title="Koha sa kam punuar ne kompani">05.12.2022</abbr></p>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In sunt id iure ipsam. <q>Cumque facere consequuntur labore nulla dolorem totam quod est facilis ab, tempora cupiditate, vel nam reprehenderit in. Lorem amet consectetur adipisicing elit. Corrupti, distinctio dolorum. <cite>Itaque non deserunt totam doloremque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum deleniti error accusamus fuga? Cumque, hic! Neque nostrum rem facere similique exercitationem, unde minus. Cupiditate</q> maiores molestiae suscipit libero, hic vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate molestiae corporis incidunt, nostrum et distinctio eius quas molestias officia. Ducimus blanditiis labore vel! Quas fugiat</cite>&nbsp;<a href="https://bootcamp.perprogramera.com/"><q>PerProgramera</q></a></p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In sunt id iure ipsam. <q>Cumque facere consequuntur labore nulla dolorem totam quod est facilis ab, tempora cupiditate, vel nam reprehenderit in. Lorem amet consectetur adipisicing elit. Corrupti, distinctio dolorum. <cite>Itaque non deserunt totam doloremque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum deleniti error accusamus fuga? Cumque, hic! Neque nostrum rem facere similique exercitationem, unde minus. Cupiditate</q> maiores molestiae suscipit libero, hic vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate molestiae corporis incidunt, nostrum et distinctio eius quas molestias officia. Ducimus blanditiis labore vel! Quas fugiat</cite>&nbsp;<a href="https://bootcamp.perprogramera.com/
+        " target="_blank" title="Faqja zyrtare Perprogramera"><q>PerProgramera</q></a></p>
     
     <br>
 
