--- a/Detyra1.html
+++ b/Detyra1.html
@@ -99,31 +99,33 @@
 
     <nav>
         <ul>
-            <li><a href="#personal-profile" title="Linku qe te qone ne Personal profile">Personal Profile</a></li>
+            <li><a href="#personal-profile" title="Linku qe te qone ne Personal profile">Personal Profile
+                    &#128590;&#127995;</a></li>
             <br>
-            <li><a href="#work-experience" title="Linku qe te qone ne Work Experience"> Work Experience</a></li>
-            <br>
-            <li><a href="#skills" title="Linku qe te qone ne Skills">Skills</a></li>
-            <br>
-            <li><a href="#education" title="Linku qe te qone ne Education and My Projekts">Education and My Projekts</a>
+            <li><a href="#work-experience" title="Linku qe te qone ne Work Experience"> Work Experience &#127922;</a>
             </li>
             <br>
-            <li><a href="#contact-me" title="Linku qe te qone ne Contact Me">Contact Me</a></li>
+            <li><a href="#skills" title="Linku qe te qone ne Skills">Skills &#9997;&#127996;</a></li>
+            <br>
+            <li><a href="#education" title="Linku qe te qone ne Education and My Projekts">Education &#127891; and My
+                    Projekts &#127909;</a>
+            </li>
+            <br>
+            <li><a href="#contact-me" title="Linku qe te qone ne Contact Me">Contact Me &#9993;</a></li>
         </ul>
     </nav>
 
-    <main>
-        <h4 title="
+    <h4 title="
     Duke ditur për mua">Know about me:
-            <progress value="10" max="100">10%</progress>
-        </h4>
-    </main>
+        <progress value="10" max="100">10%</progress>
+    </h4>
+
     <!-- ktu perfundon headin fillon body -->
     <br><br>
     <hr><br><br><br>
 
-    <section>
-        <h2 id="personal-profile">Personal Profile</h2>
+    <main>
+        <h2 id="personal-profile">Personal Profile &#128590;&#127995;</h2>
         <br>
         <br>
         <p>Lorem amet consectetur adipisicing elit.Corrupti, distinctio dolorum. Dolor aperiam quisquam vel, alias optio
@@ -175,15 +177,18 @@
             <progress value="30" max="100">10%</progress>
         </h4>
 
-        <br><br><br><br>
+    </main>
 
+    <br><br><br><br>
+
+    <section>
         <ul>
-            <li><a href="#head" title="Ky link te qon ne Header">Header ^</a></li>
+            <li><a href="#head" title="Ky link te qon ne Header">Header &uArr;</a></li>
         </ul>
 
         <hr><br><br>
 
-        <h2 id="work-experience">Work Experience</h2>
+        <h2 id="work-experience">Work Experience &#127922;</h2>
         <br>
         <h3>Google</h3>
         <p><abbr title="Koha sa kam punuar ne kompani">01.08.2010</abbr></p>
@@ -242,11 +247,14 @@
         <br><br>
 
         <ul>
-            <li><a href="#head" title="Ky link te qon ne Header">Header ^</a></li>
+            <li><a href="#head" title="Ky link te qon ne Header">Header &uArr;</a></li>
         </ul>
-        <hr>
-        <br>
-        <h2 id="skills">Skills</h2>
+    </section>
+
+    <hr><br>
+
+    <section>
+        <h2 id="skills">Skills &#9997;&#127996;</h2>
 
         <table border="0" cellpadding="10" align="center">
             <thead>
@@ -374,12 +382,14 @@
         <br><br>
 
         <ul>
-            <li><a href="#head" title="Ky link te qon ne Header">Header ^</a></li>
+            <li><a href="#head" title="Ky link te qon ne Header">Header &uArr;</a></li>
         </ul>
+    </section>
 
-        <hr><br><br>
+    <hr><br><br>
 
-        <h2 id="education">Education</h2>
+    <section>
+        <h2 id="education">Education &#127891;</h2>
         <table border="2" cellpadding="10" align="center">
             <thead>
                 <tr>
@@ -432,7 +442,7 @@
         <br><br><br><br>
         <hr><br>
 
-        <h2>My projekts</h2>
+        <h2>My projekts &#127909;</h2>
         <article>
             <table cellspacing="30">
                 <tbody>
@@ -475,12 +485,8 @@
             </table>
         </article>
 
-    </section>
+        <br>
 
-    <!-- ktu perfundon body fillon footer -->
-    <br>
-
-    <footer>
         <h4 title="
         Duke ditur për mua">Know about me:
             <progress value="100" max="100">10%</progress>
@@ -489,15 +495,19 @@
         <br><br><br>
 
         <ul>
-            <li><a href="#head" title="Ky link te qon ne Header">Header ^</a></li>
+            <li><a href="#head" title="Ky link te qon ne Header">Header &uArr;</a></li>
         </ul>
+    </section>
 
-        <hr><br><br>
+    <!-- ktu perfundon body fillon footer -->
+    <hr><br><br>
+
+    <footer>
 
         <h4 title="Sa mesuat per mua">How much did u learn about me:
             <input type="range">
         </h4>
-        <h2 id="contact-me">Contact Me</h2>
+        <h2 id="contact-me">Contact Me &#9993;</h2>
         <br>
         <form>
             <input type="text" name="Username" placeholder="Username" minlength="2" maxlength="15" required>
@@ -535,7 +545,7 @@
             </address>
 
             <ul>
-                <li><a href="#head" title="Ky link te qon ne Header">Header ^</a></li>
+                <li><a href="#head" title="Ky link te qon ne Header">Header &uArr;</a></li>
             </ul>
 
             <br>
